[gd_scene load_steps=5 format=3 uid="uid://hetcjybnuqsq"]

[ext_resource type="Script" uid="uid://6dmlcybsoc50" path="res://data/scenes_and_scripts/multiplayertesting/background_settings.gd" id="1_s2mv7"]
[ext_resource type="Texture2D" uid="uid://toy4qh1c35cl" path="res://data/images/mars_high_res.jpg" id="2_scu64"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scu64"]
bg_color = Color(0.6, 0.6, 0.6, 0.156863)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nloxk"]

[node name="BackgroundSettings" type="CanvasLayer"]
script = ExtResource("1_s2mv7")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.901961, 1)

[node name="CurrentBackground" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.028
anchor_right = 0.5
anchor_bottom = 0.028
offset_left = -427.0
offset_right = 427.0
offset_bottom = 91.0
grow_horizontal = 2
scale = Vector2(1, 0.99774)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "Current Background Name"
horizontal_alignment = 1

[node name="PreviewBackgroundButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 254.0
offset_top = 309.0
offset_right = 1072.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 56
text = "Preview  Selected Background"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.028
anchor_right = 0.5
anchor_bottom = 0.028
offset_left = -448.0
offset_top = 429.696
offset_right = 406.0
offset_bottom = 520.696
grow_horizontal = 2
scale = Vector2(1, 0.99774)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "Unlocked Collections"
horizontal_alignment = 1

[node name="GridContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -566.5
offset_top = -597.5
offset_right = 566.5
offset_bottom = 597.5
grow_horizontal = 2
grow_vertical = 2

[node name="SolarSystemCollection" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "Solar System"

[node name="Weather" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "Weather"

[node name="Colours" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "Colours"

[node name="Gradient" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "Gradient"

[node name="Button5" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button6" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button7" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button8" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button9" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button10" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="Button11" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.270588)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_scu64")
text = "LOCKED"

[node name="BackgroundPreview" type="TextureRect" parent="Control"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(990, 2151)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -1075.5
offset_right = 495.0
offset_bottom = 1075.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.995461, 0.998568)
pivot_offset = Vector2(495, 1075.5)
texture = ExtResource("2_scu64")
expand_mode = 1
stretch_mode = 6

[node name="HideBackgroundButton" type="Button" parent="Control/BackgroundPreview"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -236.0
offset_top = -85.0
offset_right = 236.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Hide Background"

[node name="FadeBox" type="ColorRect" parent="Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_nloxk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 23.0
offset_top = 2685.0
offset_right = 319.0
offset_bottom = 2845.0
theme_override_font_sizes/font_size = 111
text = "BACK"

[connection signal="pressed" from="Control/PreviewBackgroundButton" to="." method="_on_preview_background_button_pressed"]
[connection signal="pressed" from="Control/GridContainer/SolarSystemCollection" to="." method="_on_solar_system_collection_pressed"]
[connection signal="pressed" from="Control/GridContainer/Colours" to="." method="_on_colours_pressed"]
[connection signal="pressed" from="Control/BackgroundPreview/HideBackgroundButton" to="." method="_on_hide_background_button_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
